# odevo

./: .gitignore  CMakeLists.txt  README.md
src/: lsoda.cxx  lsoda.h  optim.cxx  optim.h  system.h  test.cxx
src/SRES/: CMakeLists.txt  ESES.c  ESES.h  sharefunc.c
src/odepack/: CMakeLists.txt
